# ccm

./: .gitignore  README.md  README_CN.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: release.yml
extensions/alfred-workflow/: README.md  info.plist  launch-project.sh  open-in-finder.sh  search-projects.sh
extensions/raycast-extension/: README.md  ccm-search-projects.sh  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
src/: App.tsx  install_service.rs  lib.rs  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: frontmatter.rs  install.rs  lib.rs  proxy.rs
src-tauri/src/adapters/: agent.rs  command.rs  config_based.rs  file_based.rs  hook.rs  mcp_server.rs  mod.rs  plugin_install.rs  rule.rs  skill.rs
src-tauri/src/commands/: files.rs  frontmatter_cmd.rs  global.rs  library.rs  library_plugin.rs  library_v2.rs  mcp.rs  migration.rs  mod.rs  plugins_v2.rs  projects_v2.rs  registry.rs  resource_ops.rs  settings.rs  settings_file.rs  sync.rs  versions.rs
src-tauri/src/db/: library_plugin.rs  links.rs  mcp.rs  migration.rs  mod.rs  plugins.rs  projects.rs  resources.rs
src-tauri/src/http/: mod.rs  models.rs
src-tauri/src/models/: mod.rs  project.rs  v2.rs
src-tauri/src/scanner/: global.rs  mcp.rs  mod.rs  plugin.rs  project.rs  registry.rs
src-tauri/src/sync/: mod.rs
src/adapters/: command.rs  file_based.rs  hook.rs  mcp_server.rs  mod.rs
src/commands/: api.rs  env.rs  global.rs  library_v2.rs  mod.rs  plugins_v2.rs  projects_v2.rs  (+3 more)
(+102 files in other folders)
