[package]
name = "claude-config-manager"
version = "0.1.0"
description = "CCM - Claude Config Manager"
authors = ["admin"]
edition = "2021"

[lib]
name = "claude_config_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
axum = "0.8"
tokio = { version = "1", features = ["net", "macros"] }
serde_yaml = "0.9"
semver = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
